--- a/.gitignore
+++ b/.gitignore
@@ -138,23 +138,8 @@ gradle-app.setting
 .gradletasknamecache
 
 
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
-.idea/**/contentModel.xml
-.idea/**/dataSources/
-.idea/**/dataSources.ids
-.idea/**/dataSources.local.xml
-.idea/**/sqlDataSources.xml
-.idea/**/dynamic.xml
-.idea/**/uiDesigner.xml
-.idea/**/dbnavigator.xml
-.idea/**/gradle.xml
-.idea/**/libraries
+**/.idea/**
 cmake-build-*/
-.idea/**/mongoSettings.xml
 *.iws
 .idea_modules/
 atlassian-ide-plugin.xml
@@ -163,6 +148,3 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
-.idea/httpRequests
-.idea/caches/build_file_checksums.ser
-.idea
