--- a/android-ktx/src/main/AndroidManifest.xml
+++ b/android-ktx/src/main/AndroidManifest.xml
@@ -2,4 +2,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
         package="com.nek12.androidutils.extensions">
 
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
 </manifest>
