--- a/android-ktx/src/main/AndroidManifest.xml
+++ b/android-ktx/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="com.nek12.androidutils.extensions">
+    package="com.nek12.androidutils.extensions.coroutines">
 
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
 </manifest>
