fix minor issues, upgrade to kotlin 1.6.21 to address IR and KSP bugs
Signed-off-by: Nek-12 <vaizin.nikita@gmail.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,3 +9,4 @@ org.gradle.unsafe.configuration-cache=false
 android.enableJetifier=false
 kotlin.incremental.usePreciseJavaTracking=true
 android.nonTransitiveRClass=false
+android.disableAutomaticComponentCreation=false
