add detekt, migrate to version catalogs
Signed-off-by: Nek-12 <vaizin.nikita@gmail.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-org.gradle.jvmargs=-Xmx3G -Dfile.encoding=UTF-8 -XX:+UseParallelGC
+org.gradle.jvmargs=-Xms3g -Xmx10g -XX:+UseParallelGC -XX:+UseStringDeduplication -Dkotlin.daemon.jvm.options=-Xmx2g -Dfile.encoding=UTF-8
 android.useAndroidX=true
 kotlin.code.style=official
 org.gradle.caching=true
@@ -8,3 +8,4 @@ org.gradle.configureondemand=true
 org.gradle.unsafe.configuration-cache=false
 android.enableJetifier=false
 kotlin.incremental.usePreciseJavaTracking=true
+android.disableAutomaticComponentCreation=true
