--- a/detekt.yml
+++ b/detekt.yml
@@ -1,5 +1,5 @@
 build:
-  maxIssues: 3
+  maxIssues: 1
   excludeCorrectable: true
   weights:
   # complexity: 2
@@ -81,7 +81,7 @@ complexity:
     active: true
     threshold: 5
   ComplexInterface:
-    active: true
+    active: false
     threshold: 10
     includeStaticDeclarations: false
     includePrivateDeclarations: false
@@ -137,7 +137,7 @@ complexity:
     excludeStringsWithLessThan5Characters: true
     ignoreStringsRegex: '$^'
   TooManyFunctions:
-    active: true
+    active: false
     excludes: [ '**/test/**', '**/androidTest/**', '**/commonTest/**', '**/jvmTest/**', '**/jsTest/**', '**/iosTest/**' ]
     thresholdInFiles: 11
     thresholdInClasses: 11
