--- a/.editorconfig
+++ b/.editorconfig
@@ -831,7 +831,7 @@ ij_kotlin_space_after_extend_colon = true
 ij_kotlin_space_after_type_colon = true
 ij_kotlin_space_before_catch_parentheses = true
 ij_kotlin_space_before_comma = false
-ij_kotlin_space_before_extend_colon = false
+ij_kotlin_space_before_extend_colon = true
 ij_kotlin_space_before_for_parentheses = true
 ij_kotlin_space_before_if_parentheses = true
 ij_kotlin_space_before_lambda_arrow = true
