--- a/gradle.properties
+++ b/gradle.properties
@@ -9,3 +9,4 @@ org.gradle.unsafe.configuration-cache=false
 android.enableJetifier=false
 kotlin.incremental.usePreciseJavaTracking=true
 android.disableAutomaticComponentCreation=true
+android.nonTransitiveRClass=false
