--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -33,7 +33,7 @@ turbine = "0.8.0"
 detektFormattingPlugin = "1.20.0"
 versionsPlugin = "0.42.0"
 composeDetektPlugin = "1.0.1"
-versionCatalogUpdatePlugin = "0.5.1"
+versionCatalogUpdatePlugin = "0.5.4-SNAPSHOT"
 
 [libraries]
 
