--- a/.editorconfig
+++ b/.editorconfig
@@ -773,6 +773,7 @@ ij_groovy_wrap_long_lines = false
 
 [{*.gradle.kts, *.kt, *.kts, *.main.kts}]
 ij_visual_guides = none
+ij_kotlin_line_break_after_multiline_when_entry = false
 ij_kotlin_align_in_columns_case_branch = false
 ij_kotlin_align_multiline_binary_operation = false
 ij_kotlin_align_multiline_extends_list = false
