--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,38 +1,38 @@
 [versions]
 # @pin
-gradleAndroid = "8.0.0-alpha01"
+gradleAndroid = "8.0.0-alpha08"
 # @pin
-kotlin = "1.7.10"
-activity = "1.6.0-alpha03"
-detekt = "1.22.0-RC1"
-paging = "3.2.0-alpha02"
-room = "2.5.0-alpha03"
+kotlin = "1.7.20"
+activity = "1.7.0-alpha02"
+detekt = "1.22.0-RC3"
+paging = "3.2.0-alpha03"
+room = "2.5.0-beta02"
 # @pin
-ksp = "1.7.10-1.0.6"
+ksp = "1.7.20-1.0.8"
 paging-compose = "1.0.0-alpha14"
-lifecycle = "2.6.0-alpha02"
+lifecycle = "2.6.0-alpha03"
 coroutines = "1.6.4"
-material = "1.8.0-alpha01"
+material = "1.8.0-alpha02"
 collection-ktx = "1.2.0"
 core-ktx = "1.9.0-alpha04"
 preferences-ktx = "1.2.0"
 recyclerview = "1.3.0-rc01"
-androidx-navigation = "2.6.0-alpha01"
-fragment = "1.6.0-alpha02"
-compose = "1.3.0-beta03"
-compose-compiler = "1.3.1"
-test-runner = "1.5.0-alpha04"
-espresso = "3.5.0-alpha07"
+androidx-navigation = "2.6.0-alpha04"
+fragment = "1.6.0-alpha03"
+compose = "1.4.0-alpha02"
+compose-compiler = "1.4.0-alpha01"
+test-runner = "1.5.1"
+espresso = "3.5.0"
 junit = "4.13.2"
-androidJunit = "1.1.4-alpha07"
+androidJunit = "1.1.4"
 robolectric = "4.7.3"
-kotest = "5.4.2"
-mockk = "1.13.1"
-turbine = "0.11.0"
-detektFormattingPlugin = "1.22.0-RC1"
-versionsPlugin = "0.42.0"
-composeDetektPlugin = "1.2.1"
-versionCatalogUpdatePlugin = "0.6.1"
+kotest = "5.5.4"
+mockk = "1.13.2"
+turbine = "0.12.1"
+detektFormattingPlugin = "1.22.0-RC3"
+versionsPlugin = "0.43.0"
+composeDetektPlugin = "1.2.2"
+versionCatalogUpdatePlugin = "0.7.0"
 gradleDoctorPlugin = "0.8.1"
 
 [libraries]
