get rid of core-ktx, deprecate Text
Signed-off-by: Nek-12 <vaizin.nikita@gmail.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,9 @@ org.gradle.caching=true
 org.gradle.parallel=true
 android.enableR8.fullMode=true
 org.gradle.configureondemand=true
+# Not supported by ksp
 org.gradle.unsafe.configuration-cache=false
 android.enableJetifier=false
 kotlin.incremental.usePreciseJavaTracking=true
 android.nonTransitiveRClass=false
+android.nonFinalResIds=true
