--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,15 @@
 [versions]
 # @pin
-gradleAndroid = "8.0.0-alpha08"
+gradleAndroid = "8.0.0-beta01"
 # @pin
-kotlin = "1.7.20"
+kotlin = "1.8.0"
 activity = "1.6.1"
-detekt = "1.22.0-RC3"
+detekt = "1.22.0"
 paging = "3.2.0-alpha03"
-room = "2.5.0-beta02"
+room = "2.5.0"
 # @pin
-ksp = "1.7.20-1.0.8"
-paging-compose = "1.0.0-alpha14"
+ksp = "1.8.0-1.0.9"
+paging-compose = "1.0.0-alpha15"
 lifecycle = "2.5.1"
 coroutines = "1.6.4"
 material = "1.7.0"
@@ -20,7 +20,7 @@ recyclerview = "1.3.0-rc01"
 androidx-navigation = "2.6.0-alpha04"
 fragment = "1.6.0-alpha03"
 compose = "1.3.1"
-compose-compiler = "1.3.2"
+compose-compiler = "1.4.0"
 test-runner = "1.5.1"
 espresso = "3.5.0"
 junit = "4.13.2"
@@ -29,7 +29,7 @@ robolectric = "4.7.3"
 kotest = "5.5.4"
 mockk = "1.13.2"
 turbine = "0.12.1"
-detektFormattingPlugin = "1.22.0-RC3"
+detektFormattingPlugin = "1.22.0"
 versionsPlugin = "0.44.0"
 composeDetektPlugin = "1.2.2"
 versionCatalogUpdatePlugin = "0.7.0"
@@ -41,7 +41,7 @@ kotlin-gradle = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.
 version-gradle = { module = "com.github.ben-manes:gradle-versions-plugin", version.ref = "versionsPlugin" }
 detekt-compose = { module = "ru.kode:detekt-rules-compose", version.ref = "composeDetektPlugin" }
 detekt-formatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detektFormattingPlugin" }
-kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk8", version.ref = "kotlin" }
+kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
 kotlin-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
 kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect", version.ref = "kotlin" }
 room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
@@ -51,7 +51,7 @@ room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 lifecycle-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
 lifecycle-runtime = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle" }
 paging = { module = "androidx.paging:paging-runtime", version.ref = "paging" }
-paging-common = "androidx.paging:paging-common:3.1.1"
+paging-common = { module = "androidx.paging:paging-common", version.ref = "paging" }
 paging-compose = { module = "androidx.paging:paging-compose", version.ref = "paging-compose" }
 androidx-collection = { module = "androidx.collection:collection-ktx", version.ref = "collection-ktx" }
 androidx-core = { module = "androidx.core:core-ktx", version.ref = "core-ktx" }
