update deps: kotlin 1.8, compose 1.4.0-alpha05
Signed-off-by: Nek-12 <vaizin.nikita@gmail.com>

--- a/detekt.yml
+++ b/detekt.yml
@@ -852,16 +852,16 @@ compose:
   ComposableFunctionName:
     active: false # TODO: Broken
 
-#libraries:
-#  ForbiddenPublicDataClass:
-#    active: false
-#    excludes: [ '**' ]
-#    ignorePackages:
-#      - '*.internal'
-#      - '*.internal.*'
-#  LibraryCodeMustSpecifyReturnType:
-#    active: true
-#    excludes: [ '**' ]
-#  LibraryEntitiesShouldNotBePublic:
-#    active: true
-#    excludes: [ '**' ]
+libraries:
+  ForbiddenPublicDataClass:
+    active: false
+    excludes: [ '**' ]
+    ignorePackages:
+      - '*.internal'
+      - '*.internal.*'
+  LibraryCodeMustSpecifyReturnType:
+    active: true
+    excludes: [ '**' ]
+  LibraryEntitiesShouldNotBePublic:
+    active: true
+    excludes: [ '**' ]
