--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,26 +10,25 @@ room = "2.5.0"
 # @pin
 ksp = "1.8.0-1.0.9"
 paging-compose = "1.0.0-alpha15"
-lifecycle = "2.5.1"
+lifecycle = "2.6.0-alpha05"
 coroutines = "1.6.4"
-material = "1.7.0"
+material = "1.8.0"
 collection-ktx = "1.2.0"
 core-ktx = "1.9.0-alpha04"
 preferences-ktx = "1.2.0"
 recyclerview = "1.3.0-rc01"
 androidx-navigation = "2.6.0-alpha04"
-fragment = "1.6.0-alpha03"
-compose = "1.3.1"
+fragment = "1.6.0-alpha04"
+compose = "1.4.0-alpha05"
 compose-compiler = "1.4.0"
-test-runner = "1.5.1"
-espresso = "3.5.0"
+test-runner = "1.5.2"
+espresso = "3.5.1"
 junit = "4.13.2"
-androidJunit = "1.1.4"
+androidJunit = "1.1.5"
 robolectric = "4.7.3"
 kotest = "5.5.4"
-mockk = "1.13.2"
+mockk = "1.13.4"
 turbine = "0.12.1"
-detektFormattingPlugin = "1.22.0"
 versionsPlugin = "0.44.0"
 composeDetektPlugin = "1.2.2"
 versionCatalogUpdatePlugin = "0.7.0"
@@ -40,7 +39,8 @@ android-gradle = { module = "com.android.tools.build:gradle", version.ref = "gra
 kotlin-gradle = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 version-gradle = { module = "com.github.ben-manes:gradle-versions-plugin", version.ref = "versionsPlugin" }
 detekt-compose = { module = "ru.kode:detekt-rules-compose", version.ref = "composeDetektPlugin" }
-detekt-formatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detektFormattingPlugin" }
+detekt-libraries = { module = "io.gitlab.arturbosch.detekt:detekt-rules-libraries", version.ref = "detekt" }
+detekt-formatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detekt" }
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
 kotlin-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
 kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect", version.ref = "kotlin" }
