--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,8 @@
 name: CI
 
 on:
-  #  push:
-  #    branches: [ master ]
+  push:
+    branches: [ master ]
   pull_request:
     branches: [ master ]
 
@@ -19,37 +19,26 @@ jobs:
         run: mkdir -p ~/.gradle ; cp .github/ci-gradle.properties ~/.gradle/gradle.properties
 
       - name: set up JDK
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
+          distribution: 'zulu'
+          check-latest: true
           java-version: 19
+          cache: 'gradle'
 
-      - name: Make files executable
-        run: chmod +x ./gradlew && chmod +x ./scripts/checksum.sh
-
-      - name: Generate cache key
-        run: ./scripts/checksum.sh checksum.txt
+      - name: Validate gradle wrapper
+        uses: gradle/wrapper-validation-action@v1
 
       - name: Create local properties
         env:
           LOCAL_PROPERTIES: ${{ secrets.LOCAL_PROPERTIES }}
         run: echo "$LOCAL_PROPERTIES" > local.properties
 
-      - uses: actions/cache@v2
-        with:
-          path: |
-            ~/.gradle/caches/modules-*
-            ~/.gradle/caches/jars-*
-            ~/.gradle/caches/build-cache-*
-          key: gradle-${{ hashFiles('checksum.txt') }}
-
       - name: Run detekt
         run: ./gradlew detektAll
 
-      - name: Build debug
-        run: ./gradlew assembleDebug --stacktrace
-
-      - name: Build release
-        run: ./gradlew assembleRelease --stacktrace
+      - name: Build release / debug
+        run: ./gradlew assemble --stacktrace
 
       - name: Unit tests
         run: ./gradlew test --stacktrace
