--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,7 @@ lifecycle = "2.6.0-rc01"
 coroutines = "1.6.4"
 material = "1.8.0"
 collection-ktx = "1.2.0"
-core-ktx = "1.9.0-alpha04"
+core-ktx = "1.9.0"
 preferences-ktx = "1.2.0"
 recyclerview = "1.3.0-rc01"
 androidx-navigation = "2.6.0-alpha06"
