--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,9 +17,9 @@ collection-ktx = "1.2.0"
 core-ktx = "1.9.0"
 preferences-ktx = "1.2.0"
 recyclerview = "1.3.0-rc01"
-androidx-navigation = "2.6.0-alpha06"
-fragment = "1.6.0-alpha06"
-compose = "1.4.0-beta02"
+androidx-navigation = "2.5.3"
+fragment = "1.5.5"
+compose = "1.4.0-rc01"
 compose-compiler = "1.4.3"
 test-runner = "1.5.2"
 espresso = "3.5.1"
