--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,26 +1,26 @@
 [versions]
 # @pin
-gradleAndroid = "8.0.0-beta04"
+gradleAndroid = "8.2.0-rc01"
 # @pin
-kotlin = "1.8.10"
-activity = "1.6.1"
+kotlin = "1.9.10"
+activity = "1.8.0"
 detekt = "1.22.0"
 paging = "3.2.0-alpha04"
 room = "2.5.0"
 # @pin
-ksp = "1.8.10-1.0.9"
+ksp = "1.9.10-1.0.13"
 paging-compose = "1.0.0-alpha15"
 lifecycle = "2.6.0-rc01"
-coroutines = "1.6.4"
+coroutines = "1.7.3"
 material = "1.8.0"
 collection-ktx = "1.2.0"
-core-ktx = "1.9.0"
+core-ktx = "1.9.0-alpha04"
 preferences-ktx = "1.2.0"
 recyclerview = "1.3.0-rc01"
-androidx-navigation = "2.5.3"
-fragment = "1.5.5"
-compose = "1.4.0-rc01"
-compose-compiler = "1.4.3"
+androidx-navigation = "2.6.0-alpha06"
+fragment = "1.6.0-alpha06"
+compose = "1.5.4"
+compose-compiler = "1.5.3"
 test-runner = "1.5.2"
 espresso = "3.5.1"
 junit = "4.13.2"
@@ -31,7 +31,7 @@ mockk = "1.13.4"
 turbine = "0.12.1"
 versionsPlugin = "0.46.0"
 composeDetektPlugin = "1.2.2"
-versionCatalogUpdatePlugin = "0.7.0"
+versionCatalogUpdatePlugin = "0.8.1"
 gradleDoctorPlugin = "0.8.1"
 
 [libraries]
