--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,22 @@
-org.gradle.jvmargs=-Xms3g -Xmx10g -XX:+UseParallelGC -XX:+UseStringDeduplication -Dkotlin.daemon.jvm.options=-Xmx2g -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xms3g -Xmx6g -XX:+UseParallelGC -XX:+UseStringDeduplication -Dkotlin.daemon.jvm.options=-Xmx2g -Dfile.encoding=UTF-8
 android.useAndroidX=true
 kotlin.code.style=official
 org.gradle.caching=true
 org.gradle.parallel=true
 android.enableR8.fullMode=true
 org.gradle.configureondemand=true
-# Not supported by ksp
-org.gradle.unsafe.configuration-cache=false
 android.enableJetifier=false
 kotlin.incremental.usePreciseJavaTracking=true
-android.nonTransitiveRClass=false
+android.nonTransitiveRClass=true
+android.experimental.enableSourceSetPathsMap=true
+android.experimental.cacheCompileLibResources=true
+kotlin.mpp.enableCInteropCommonization=true
+kotlin.mpp.stability.nowarn=true
+org.gradle.unsafe.configuration-cache=true
+kotlin.mpp.androidSourceSetLayoutVersion=2
+android.disableResourceValidation=true
 android.nonFinalResIds=true
+kotlin.mpp.androidGradlePluginCompatibility.nowarn=true
+kotlin.native.ignoreIncorrectDependencies=false
+kotlinx.atomicfu.enableJvmIrTransformation=true
+systemProp.org.gradle.unsafe.kotlin.assignment=true
