--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,33 +4,33 @@ gradleAndroid = "8.2.0-rc01"
 # @pin
 kotlin = "1.9.10"
 activity = "1.8.0"
-detekt = "1.22.0"
-paging = "3.2.0-alpha04"
-room = "2.5.0"
+detekt = "1.23.1"
+paging = "3.2.1"
+room = "2.6.0"
 # @pin
 ksp = "1.9.10-1.0.13"
-paging-compose = "1.0.0-alpha15"
-lifecycle = "2.6.0-rc01"
+paging-compose = "3.2.1"
+lifecycle = "2.6.2"
 coroutines = "1.7.3"
-material = "1.8.0"
-collection-ktx = "1.2.0"
-core-ktx = "1.9.0-alpha04"
-preferences-ktx = "1.2.0"
-recyclerview = "1.3.0-rc01"
-androidx-navigation = "2.6.0-alpha06"
-fragment = "1.6.0-alpha06"
+material = "1.10.0"
+collection-ktx = "1.3.0"
+core-ktx = "1.12.0"
+preferences-ktx = "1.2.1"
+recyclerview = "1.3.2"
+androidx-navigation = "2.7.4"
+fragment = "1.6.1"
 compose = "1.5.4"
 compose-compiler = "1.5.3"
 test-runner = "1.5.2"
 espresso = "3.5.1"
 junit = "4.13.2"
 androidJunit = "1.1.5"
-robolectric = "4.7.3"
-kotest = "5.5.5"
-mockk = "1.13.4"
-turbine = "0.12.1"
-versionsPlugin = "0.46.0"
-composeDetektPlugin = "1.2.2"
+robolectric = "4.10.3"
+kotest = "5.7.2"
+mockk = "1.13.8"
+turbine = "1.0.0"
+versionsPlugin = "0.49.0"
+composeDetektPlugin = "1.3.0"
 versionCatalogUpdatePlugin = "0.8.1"
 gradleDoctorPlugin = "0.8.1"
 
@@ -51,7 +51,7 @@ room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 lifecycle-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
 lifecycle-runtime = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle" }
 paging = { module = "androidx.paging:paging-runtime", version.ref = "paging" }
-paging-common = "androidx.paging:paging-common:3.2.0-alpha03"
+paging-common = { module = "androidx.paging:paging-common", version.ref = "paging" }
 paging-compose = { module = "androidx.paging:paging-compose", version.ref = "paging-compose" }
 androidx-collection = { module = "androidx.collection:collection-ktx", version.ref = "collection-ktx" }
 androidx-core = { module = "androidx.core:core-ktx", version.ref = "core-ktx" }
@@ -65,6 +65,7 @@ androidx-navigation-ui = { module = "androidx.navigation:navigation-ui-ktx", ver
 recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "recyclerview" }
 compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
 compose-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "compose" }
+compose-activity = { module = "androidx.activity:activity-compose", version.ref = "activity" }
 compose-material = { module = "androidx.compose.material:material", version.ref = "compose" }
 compose-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
 compose-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
@@ -90,8 +91,6 @@ unittest = [
     "kotest-junit",
     "kotest-property",
     "kotlin-reflect",
-    "mockk",
-    "mockk-jvm",
 ]
 
 [plugins]
