--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,10 @@
-org.gradle.jvmargs=-Xms3g -Xmx6g -XX:+UseParallelGC -XX:+UseStringDeduplication -Dkotlin.daemon.jvm.options=-Xmx2g -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx6g -XX:+UseParallelGC -XX:+UseStringDeduplication -Dfile.encoding=UTF-8 -XX:MaxMetaspaceSize=2g
+kotlin.daemon.jvmargs=-Xmx6g -XX:+UseParallelGC -XX:+UseStringDeduplication -XX:MaxMetaspaceSize=2g
 android.useAndroidX=true
 kotlin.code.style=official
 org.gradle.caching=true
 org.gradle.parallel=true
+org.gradle.daemon=true
 android.enableR8.fullMode=true
 org.gradle.configureondemand=true
 android.enableJetifier=false
@@ -12,11 +14,23 @@ android.experimental.enableSourceSetPathsMap=true
 android.experimental.cacheCompileLibResources=true
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.mpp.stability.nowarn=true
+kotlin.mpp.androidGradlePluginCompatibility.nowarn=true
 org.gradle.unsafe.configuration-cache=true
 kotlin.mpp.androidSourceSetLayoutVersion=2
 android.disableResourceValidation=true
 android.nonFinalResIds=true
-kotlin.mpp.androidGradlePluginCompatibility.nowarn=true
-kotlin.native.ignoreIncorrectDependencies=false
 kotlinx.atomicfu.enableJvmIrTransformation=true
-systemProp.org.gradle.unsafe.kotlin.assignment=true
+kotlin.experimental.tryK2=true
+android.lint.useK2Uast=true
+org.gradle.configuration-cache.problems=warn
+nl.littlerobots.vcu.resolver=true
+# Do not garbage collect on timeout on native when appExtensions are used and app is in bacground
+kotlin.native.binary.appStateTracking=enabled
+# Lift main thread suspending function invocation restriction
+kotlin.native.binary.objcExportSuspendFunctionLaunchThreadRestriction=none
+# Native incremental compilation
+kotlin.incremental.native=true
+android.experimental.additionalArtifactsInModel=true
+org.jetbrains.compose.experimental.macos.enabled=true
+org.jetbrains.compose.experimental.jscanvas.enabled=true
+org.jetbrains.compose.experimental.wasm.enabled=true
