--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,43 +1,41 @@
 [versions]
 # @pin
-gradleAndroid = "8.2.0-rc01"
+gradleAndroid = "8.2.2"
 # @pin
-kotlin = "1.9.10"
-activity = "1.8.0"
-detekt = "1.23.1"
+kotlin = "1.9.22"
+activity = "1.8.2"
+detekt = "1.23.5"
 paging = "3.2.1"
-room = "2.6.0"
+room = "2.6.1"
 # @pin
-ksp = "1.9.10-1.0.13"
+ksp = "1.9.22-1.0.16"
 paging-compose = "3.2.1"
-lifecycle = "2.6.2"
-coroutines = "1.7.3"
-material = "1.10.0"
-collection-ktx = "1.3.0"
+lifecycle = "2.7.0"
+coroutines = "1.8.0"
+material = "1.11.0"
+collection-ktx = "1.4.0"
 core-ktx = "1.12.0"
 preferences-ktx = "1.2.1"
 recyclerview = "1.3.2"
-androidx-navigation = "2.7.4"
-fragment = "1.6.1"
-compose = "1.5.4"
-compose-compiler = "1.5.3"
+androidx-navigation = "2.7.7"
+fragment = "1.6.2"
+compose = "1.6.3"
+compose-compiler = "1.5.10"
 test-runner = "1.5.2"
 espresso = "3.5.1"
 junit = "4.13.2"
 androidJunit = "1.1.5"
-robolectric = "4.10.3"
-kotest = "5.7.2"
-mockk = "1.13.8"
-turbine = "1.0.0"
-versionsPlugin = "0.49.0"
+robolectric = "4.11.1"
+kotest = "5.8.0"
+mockk = "1.13.9"
+turbine = "1.1.0"
 composeDetektPlugin = "1.3.0"
-versionCatalogUpdatePlugin = "0.8.1"
-gradleDoctorPlugin = "0.8.1"
+versionCatalogUpdatePlugin = "0.8.4"
+gradleDoctorPlugin = "0.9.1"
 
 [libraries]
 android-gradle = { module = "com.android.tools.build:gradle", version.ref = "gradleAndroid" }
 kotlin-gradle = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
-version-gradle = { module = "com.github.ben-manes:gradle-versions-plugin", version.ref = "versionsPlugin" }
 detekt-compose = { module = "ru.kode:detekt-rules-compose", version.ref = "composeDetektPlugin" }
 detekt-libraries = { module = "io.gitlab.arturbosch.detekt:detekt-rules-libraries", version.ref = "detekt" }
 detekt-formatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detekt" }
@@ -95,8 +93,5 @@ unittest = [
 
 [plugins]
 version-catalog-update = { id = "nl.littlerobots.version-catalog-update", version.ref = "versionCatalogUpdatePlugin" }
-versions = { id = "com.github.ben-manes.versions", version.ref = "versionsPlugin" }
-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
-gradleDoctor = { id = "com.osacky.doctor", version.ref = "gradleDoctorPlugin" }
