--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,6 @@ kotlin.daemon.jvmargs=-Xmx6g -XX:+UseParallelGC -XX:+UseStringDeduplication -XX:
 android.useAndroidX=true
 kotlin.code.style=official
 org.gradle.caching=true
-org.gradle.parallel=true
 org.gradle.daemon=true
 android.enableR8.fullMode=true
 org.gradle.configureondemand=true
@@ -15,7 +14,6 @@ android.experimental.cacheCompileLibResources=true
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.mpp.stability.nowarn=true
 kotlin.mpp.androidGradlePluginCompatibility.nowarn=true
-org.gradle.unsafe.configuration-cache=true
 kotlin.mpp.androidSourceSetLayoutVersion=2
 android.disableResourceValidation=true
 android.nonFinalResIds=true
@@ -34,3 +32,7 @@ android.experimental.additionalArtifactsInModel=true
 org.jetbrains.compose.experimental.macos.enabled=true
 org.jetbrains.compose.experimental.jscanvas.enabled=true
 org.jetbrains.compose.experimental.wasm.enabled=true
+
+# TODO: Disabled because of broken jitpatck publishing?
+org.gradle.unsafe.configuration-cache=false
+org.gradle.parallel=false
