disable k2, downgrade kotlin to 1.9
Signed-off-by: Nek-12 <vaizin.nikita@gmail.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,7 @@ kotlin.mpp.androidSourceSetLayoutVersion=2
 android.disableResourceValidation=true
 android.nonFinalResIds=true
 kotlinx.atomicfu.enableJvmIrTransformation=true
-kotlin.experimental.tryK2=true
+kotlin.experimental.tryK2=false
 android.lint.useK2Uast=true
 org.gradle.configuration-cache.problems=warn
 nl.littlerobots.vcu.resolver=true
